smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/unclosed-string2.smithy
// Syntax error at line 6, column 1: Expected: '"', but found '[EOF]'
namespace smithy.example

@documentation("\")
string MyString
